<resources>
    <string name="app_name">Contacts App</string>
    <string name="milestone_2">Milestone 2</string>
    <string name="meme_name_">Meme Name</string>
    <string name="meme_from_api">Meme from API</string>
    <string name="background_image">Background Image</string>

    <string name="start">Start</string>
    <string name="sidebar_design">Sidebar Design</string>
    <string name="login">Login</string>
    <string name="login_asset">Login_asset</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="register">Register</string>
    <string name="come_back_with_your_id">Come back with your ID</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">OR</string>
    <string name="not_a_member_sign_up">Not a member? <font color='#01C6DB'> Sign up</font> </string>
    <string name="sign_up">Sign up</string>
    <string name="person_name">Person Name</string>
    <string name="sample_number" translatable="false">+923---------</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_contact">Create Contact</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="contacts">Contacts</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_contacts_navigation_drawer">ContactsNavigationDrawerActivity
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_us">About us</string>
    <string name="rasaal_ahmad">Rasaal Ahmad</string>
    <string name="rasaalahmad_folio3_com" translatable="false">rasaalahmad@folio3.com</string>
    <string name="my_name">Rasaal Ahmad</string>
    <string name="fcm_message" translatable="false">FCM Message</string>
    <string name="msg_token_fmt" translatable="false">FCM Token</string>
    <string name="test_crashlytics">Test Crashlytics</string>
    <string name="dialog_message">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contact_delete_message">Contact Deleted Successfully</string>
    <string name="contact_update_message">Contact Updated Successfully</string>
    <string name="contact_added_message">Contact Added Successfully</string>
    <string name="enter_complete_details">Enter complete details!!</string>
    <string name="upload_image">Upload Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>