<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity3"
    android:background="@drawable/blob_background1">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_logo4_128px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_text"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.01"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_view2"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:drawableStart="@drawable/username_icon24px"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:paddingEnd="26dp"
        android:singleLine="true"
        android:textColor="@color/stromi_2"
        android:textColorHint="@color/stromi_2"
        tools:ignore="Autofill,TextFields"/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_view2"
        android:drawableStart="@drawable/password_icon_24px"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:paddingEnd="26dp"
        android:singleLine="true"
        android:textColor="@color/stromi_2"
        android:textColorHint="@color/stromi_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="Autofill,TextFields"/>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        app:layout_constraintTop_toBottomOf="@id/loginbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/forget_password"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member_sign_up"
        app:layout_constraintTop_toBottomOf="@id/forget_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/signup_msg"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>